<?xml version="1.0"?>
<package format="2">
  <name>decanstructor</name>
  <version>0.0.1</version>
  <description>The decanstructor package</description>
  <maintainer email="jwhitley@autonomoustuff.com">Josh Whitley</maintainer>
  <author email="jwhitley@autonomoustuff.com">Josh Whitley</author>

  <license>MIT</license>
  <!-- <url type="website">http://wiki.ros.org/decanstructor</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>roscpp</depend>
  <depend>can_msgs</depend>
  <depend>std_msgs</depend>
  <depend>wxwidgets</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
